# 10x-AI-CHALLENGE

./: README.md
trp1-ai-artist/: .env.example  .gitignore  CLAUDE.md  Makefile  NEXT_STEPS.md  README.md  SUBMISSION.md  pyproject.toml
trp1-ai-artist/.agent/rules/: RULES.md
trp1-ai-artist/.agent/skills/music_generation/: SKILL.md
trp1-ai-artist/.agent/skills/prompt_engineering/: SKILL.md
trp1-ai-artist/.agent/skills/video_generation/: SKILL.md
trp1-ai-artist/.agent/workflows/: generate-music.md  generate-video.md
trp1-ai-artist/configs/: default.yaml
trp1-ai-artist/docs/: TRP 1 - MCP Setup Challenge.md  TRP1_AI_Content_Generation_Challenge.md
trp1-ai-artist/docs/guides/: AI_CONTENT_CREATION_GUIDELINES.md  EXTENDING.md
trp1-ai-artist/examples/: 01_basic_music.py  02_basic_video.py  03_lyrics_workflow.py  04_image_to_video.py  05_provider_comparison.py  06_music_video_pipeline.py  07_archive_integration.py  08_custom_provider.py  lyria_example_ethiopian.py  shega_lij_bachata_remix.py
trp1-ai-artist/exploration/: API_AVAILABILITY.md  ARCHITECTURE.md  CREATIVE_SOLUTION.md  ENABLE_GOOGLE_API.md  FREE_VIDEO_APIS.md  PART3_ATTEMPTS.md  PRESETS.md  PROVIDERS.md
trp1-ai-artist/scripts/: combine_audio_video.py
trp1-ai-artist/src/ai_content/: __init__.py
trp1-ai-artist/src/ai_content/cli/: __init__.py  main.py
trp1-ai-artist/src/ai_content/config/: __init__.py  loader.py  settings.py
trp1-ai-artist/src/ai_content/core/: __init__.py  exceptions.py  job_tracker.py  provider.py  registry.py  result.py
trp1-ai-artist/src/ai_content/integrations/: __init__.py  archive.py  media.py  youtube.py
trp1-ai-artist/src/ai_content/pipelines/: __init__.py  base.py  full.py  music.py  video.py
trp1-ai-artist/src/ai_content/presets/: __init__.py  music.py  video.py
trp1-ai-artist/src/ai_content/providers/: __init__.py
trp1-ai-artist/src/ai_content/providers/aimlapi/: __init__.py  client.py
trp1-ai-artist/src/ai_content/providers/google/: __init__.py  imagen.py  lyria.py  veo.py
trp1-ai-artist/src/ai_content/providers/kling/: __init__.py  direct.py
trp1-ai-artist/src/ai_content/utils/: __init__.py  file_handlers.py  lyrics_parser.py  retry.py
